formatting in CSS added img tag to fix photos not showing up.

--- a/js/fotorama.css
+++ b/js/fotorama.css
@@ -12,7 +12,7 @@
 }
 
 .fotorama--fullscreen, .fotorama__img {
-  max-width: 99999px !important;
+  max-width: 75% !important;
   max-height: 99999px !important;
   min-width: 0 !important;
   min-height: 0 !important;
